library/general/gpusharedmemory/samples/gpu-exempt-without-shm/example_init_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exempt-gpu-init-container-without-shm
spec:
  containers:
    - name: application
      image: nginx:1.25
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 100m
          memory: 128Mi
