library/general/gpusharedmemory/samples/gpu-exempt-without-shm/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGpuSharedMemory
metadata:
  name: require-gpu-shm
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages:
      - "nvidia/dcgm-exporter:*"
